--- a/docs/custom.scss
+++ b/docs/custom.scss
@@ -5,7 +5,7 @@
 
 $body-bg: #F2F9F9;
 $body-color: #222;
-$link-color: #757ce0;
+$link-color: #8aabf1;
 $presentation-heading-color: $body-color;
 
 /*-- scss:rules --*/
